# u-talkin-umap-to-me

./: LICENSE  README.md  pyproject.toml
notebooks/: dimensionality-reduction.ipynb
slides/: 2020-04-14_remmel-update.html  2020-04-16_remmel-update.html  2020-04-21_remmel-update.html  What is dimensionality reduction.md  boston-python-umap.html  index.html  log.html  scaled.html  unscaled.html
slides/figures/: 2020-04-14_jones_exploratory-chart.html  five_dimensions.html  mcdonalds_pca.html  mcdonalds_umap.html  one_dimension_hist.html  one_dimension_x.html  three_dimensions_xycategory.html  three_dimensions_xycolor.html  two_dimensions_xy.html
