[tool.poetry]
name = "u-talkin-umap-to-me"
version = "0.1.0"
description = ""
authors = ["calremmel <calremmel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
numpy = "^1.19.2"
altair = "^4.1.0"
umap-learn = "^0.4.6"
hdbscan = "^0.8.26"
scipy = "^1.5.2"
jupyterlab = "^2.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
